[package]
name = "djed_charts"
version = "0.1.0"
authors = ["djedou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
djed = {git = "https://github.com/djedou/djed"}
rs_svg = {git = "https://github.com/djedou/rs_svg"}
format_num = "0.1"